--- a/nomadAdvisor-frontend/src/App.css
+++ b/nomadAdvisor-frontend/src/App.css
@@ -230,3 +230,21 @@ body {
   background-position: center;
   opacity: 0.88;
 }
+
+/* ADD CITY FORM */
+.add-city-form {
+  width: 50%;
+  margin: 0 auto;
+  padding: 5em;
+}
+
+.form-title {
+  color: whitesmoke;
+  text-shadow: 1px 1px 2px #000000;
+  font-size: 3em;
+  padding: 1em;
+  text-align: center;
+}
+.add-city-title {
+  background-image: url("../src/assets/banner7.avif");
+}
